<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlackActivity">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operationField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operationField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/resultField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField" />

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberField">


        <Button
            android:id="@+id/ac"
            style="@style/CalcButtonStyle"
            android:text="@string/C" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/scobe" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/percent" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/divide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/support_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel">

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_1" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_2" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_3" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/multily" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel">

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_4" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_5" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_6" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forthButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/support_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel">

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_7" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_8" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_9" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forthButtonPanel">

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/pus_minus" />

        <Button
            style="@style/CalcSupportButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/_0" />

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/dot"/>

        <Button
            style="@style/CalcButtonStyle"
            android:onClick="onOperationClick"
            android:text="@string/equals" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/supportButtonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forthButtonPanel">

        <Button
            android:id="@+id/whitetheme"
            style="@style/CalcSupportButtonStyle"
            android:text="@string/white_theme" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>